fix(publications): fix too large space between pdf icon and link text in firefox

--- a/css/style.css
+++ b/css/style.css
@@ -1039,9 +1039,12 @@ a:active {
   font-weight: 700;
 }
 
+.dImgLink {
+  margin-left: -45px;
+}
+
 .dlImg {
   vertical-align: middle;
-  margin-left: -45px;
 }
 
 .paperLink {
